--- a/about.html
+++ b/about.html
@@ -325,7 +325,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>  
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost:8080/SwastikBuildcon/index.html#contact">Contact</a>
+          <a class="nav-link" href="https://megha-kushwaha.github.io/SwastikBuildcon/#contact">Contact</a>
         </li> 
       </ul>
     </div>
